--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="memoriesContainer" class="mb-6">
         <h2 class="text-xl font-semibold mb-2">Memories</h2>
         <div id="memoriesList" class="space-y-2">
-          <!-- Memory Items will be appended here -->
+          <!-- Memory Items will be appended here dynamically -->
         </div>
       </div>
 
@@ -31,7 +31,7 @@
       <div id="conversationsContainer" class="mb-6">
         <h2 class="text-xl font-semibold mb-2">Conversations</h2>
         <div id="conversationsList" class="space-y-2">
-          <!-- Conversation Items will be appended here -->
+          <!-- Conversation Items will be appended here dynamically -->
         </div>
       </div>
 
@@ -131,7 +131,7 @@
     <div class="bg-white text-gray-800 rounded-lg p-6 w-11/12 md:w-2/3 lg:w-1/2 overflow-y-auto max-h-screen">
       <div class="flex flex-col items-center space-y-4">
         <h2 id="modalTitle" class="text-2xl font-bold">Title</h2>
-        <div id="modalContent" class="text-left">
+        <div id="modalContent" class="text-left w-full">
           <!-- Dynamic Content -->
         </div>
         <button id="closeModalButton" class="mt-4 px-4 py-2 bg-red-500 hover:bg-red-600 text-white rounded">
